--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,20 +7,28 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || "Ice Cream" %></title>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <%= stylesheet_link_tag "site" %>
+    <%= javascript_include_tag "jquery-3.2.1" %>
     <%= javascript_include_tag "site" %>
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
   </head>
-  <body>
+  <body class="<%= page_classes %>">
     <div class="nav">
-      <h3>Ice Cream</h3>
+      <% link_to 'http://www.icecreamonasunday.com' do %>
+        <%= tag :img, :src => '/images/blog_title.svg', :class => "logo" %>
+      <% end %>
       <ul>
-        <li>Latest</li>
-        <li><%= link_to 'About', '/about' %></li>
-        <li>Recipes</li>
+        <li><%= link_to 'Home', '/index.html', :relative => true %></li>
+        <li><%= link_to 'Recipes', '/recipes.html', :relative => true %></li>
+        <li><%= link_to 'About', '/about.html', :relative => true %></li>
       </ul>
     </div>
-    <%= yield %>
-    <div class="footer">Made by me.</div>
+    <div id="main">
+      <%= yield %>
+    </div>
+    <div class="footer">
+      <p>Made by me.</p>
+    </div>
   </body>
 </html>
