--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,46 +1,6 @@
+@import "bourbon";
 @import "neat";
-
-body {
-  background-color: #fff;
-  color: #444;
-  font-family: 'Catamaran', sans-serif;
-  margin: 0 auto;
-}
-
-a {
-  color: rgba(#000, 0.7);
-
-  &:focus,
-  &:hover {
-    color: rgba(#000, 0.6);
-  }
-}
-
-h1 {
-  font-weight: 800;
-  letter-spacing: 1px;
-}
-
-.nav {
-  display: flex;
-  flex-direction: row;
-  background-color:#f1c800;
-  padding: 0px 30px;
-  h3 {
-    flex: 1 0 0;
-  }
-  ul {
-    list-style: none;
-    display: flex;
-    flex: 2 0 0;
-    align-content: space-evenly;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  li {
-    padding: 0px 10px;
-  }
-}
+@import "base/base";
 
 .hero {
   background-color: #f7d525;
@@ -51,11 +11,22 @@ h1 {
   justify-content: space-around;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0px;
-  background-color: #f7f7f7;
-  width: 100%;
-  padding: 15px;
-  color: #999;
+.recipes_index {
+
+  .entries {
+    display: flex;
+
+    .entry {
+      background-color: blue;
+      height: 300px;
+      width: 300px;
+    }
+
+  }
+
 }
+
+.recipe-illustration {
+  width: 300px;
+}
+
