Add layout structure to page, add more illustrations
This commit adds layout structure, including a container box that
is 1000px wide so that content stays structured on larger pages.
It also includes a new entry for roasted bananas along with
illustrations. I started to add content for further implementation
of the design as well (such as custard), etc.

--- a/source/entries/recipes/peanut-butter-cookies-and-cream.html.erb
+++ b/source/entries/recipes/peanut-butter-cookies-and-cream.html.erb
@@ -11,5 +11,8 @@ ingredients_tag: ../../../images/illustrations/oreos.png
 
 ---
 
-<h1>Peanut Butter Cookies and Cream</h1>
+This is a summary for peanut butter cookies and cream ice cream.
+
+READMORE
+
 This is an article about ice cream.
