--- a/source/stylesheets/base/_layout.scss
+++ b/source/stylesheets/base/_layout.scss
@@ -18,22 +18,39 @@ body {
   background-color: #fff;
   color: #444;
   font-family: 'Fira Sans', sans-serif;
-  margin: 225px auto;
+  margin: 0 auto;
   background: url('../images/hip-square.png');
   // height: 2000px;
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 #main {
-   @include grid-container(1000px);
+   margin-top: 225px;
+   margin-bottom: 100px;
+   flex: 1 0 auto;
 }
 
 .footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #f7f7f7;
-  padding: 0px 30px;
+  flex-shrink: 0;
+  background-color: black;
+  padding: 40px 30px;
   width: 100%;
-  color: #999;
+  color: $white;
+
+  .first-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .link {
+    display: flex;
+    justify-content: space-around;
+  }
 }
