Edit SCSS and index file according to Mikes comments

--- a/source/entries/tips/how-to-make-perfect-custard.html.erb
+++ b/source/entries/tips/how-to-make-perfect-custard.html.erb
@@ -1,6 +1,7 @@
 ---
 
-title: How to Make Perfect Custard
+title: Perfect Custard
+pre_title: How to make
 date: 2017-10-03 20:11 UTC
 layout: recipes
 tags:
@@ -13,5 +14,5 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh 
 
 READMORE
 
-<h1>Roasted Banana</h1>
-This is a list of ingredients and some instructions.
+<h1>Perfect Custard</h1>
+Here are instructions for making the perfect custard!!
