Edit SCSS files according to csscomb
Added csscomb plugin and automatically runs it while saving a file
so that there is consistency across stylesheets.

--- a/source/stylesheets/base/_feature_sections.scss
+++ b/source/stylesheets/base/_feature_sections.scss
@@ -1,3 +1,12 @@
+.hero {
+  align-items: center;
+  background-color: #f7d525;
+  display: flex;
+  height: 300px;
+  justify-content: space-around;
+  width: 100%;
+}
+
 .jumbo-feature {
   height: 600px;
 
