--- a/source/stylesheets/base/_navigation.scss
+++ b/source/stylesheets/base/_navigation.scss
@@ -1,17 +1,17 @@
 .nav {
-  width: 100%;
   background-color: $white;
-  padding: 30px 30px;
-  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, .15);
-  z-index: 999;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15);
   height: 225px;
-  transition: height 0.1s ease;
-  position:fixed;
+  padding: 30px 30px;
+  position: fixed;
   top: 0;
+  transition: height 0.1s ease;
+  width: 100%;
+  z-index: 999;
 
   .container {
-    flex-direction: row;
     display: flex;
+    flex-direction: row;
 
     img {
       transition: height 0.1s ease;
@@ -22,26 +22,25 @@
     }
 
     ul {
-      list-style: none;
+      align-content: space-evenly;
+      align-items: flex-end;
+      background: url("../images/nav_background.svg") no-repeat top right;
       display: flex;
       flex: 2 0 0;
-      align-content: space-evenly;
       justify-content: flex-end;
-      align-items: flex-end;
-      background: url('../images/nav_background.svg') no-repeat top right;
+      list-style: none;
     }
 
     li {
-
       a {
         color: $blue;
-        text-decoration: none;
         font-weight: 400;
         padding: 3px 20px;
+        text-decoration: none;
         &:hover {
-          color: $white;
-          background: url('../images/link-background.svg') no-repeat center center;
+          background: url("../images/link-background.svg") no-repeat center center;
           background-size: contain;
+          color: $white;
         }
       }
     }
