Load correct content in featured-tip container
This PR adds the correct content and adjusts the way other content
is loaded in their respective containers to make sure it always
has a relevant post to the given section. Typographic styling and
padding for links will be included in next PR. Also adds a few
more illustrations (pistachio, sour cream..) and the inline-svg
gem.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,11 +5,11 @@ per_page: 4
 
 <div class="jumbo-feature">
   <div class="container">
-    <% blog.articles[0...1].each do |article| %>
-      <div class="left">
+    <% blog.articles.select{ |article| article.data.category == 'recipes' }[0...1].each do |article| %>
+      <div class="illustration">
         <img src="<%= article.data.illustration_tag %>" class="fadeIn" />
       </div>
-      <div class="right">
+      <div class="text-and-description">
         <article>
           <img src="images/illustrations/rubber-spatula.png" />
           <h1>
@@ -30,7 +30,7 @@ per_page: 4
   <div class="container">
     <h2>Featured Flavors</h2>
     <div class="flavors">
-      <% blog.articles[0...3].each do |article| %>
+      <% blog.articles.select{ |article| article.data.category == 'recipes' }[0...3].each do |article| %>
         <div class="flavor">
           <img src="<%= article.data.ingredients_tag %>" class="fadeIn" />
           <article>
@@ -43,6 +43,23 @@ per_page: 4
         </div>
       <% end %>
     </div>
+  </div>
+</div>
+
+<div class="featured-tip">
+  <div class="container">
+    <% blog.articles.select{ |article| article.data.category == 'tips' }[0...1].each do |article| %>
+      <div class="title-and-summary">
+        <h5><%= article.data.pre_title %></h5>
+        <h2><%= article.data.title %></h2>
+        <%= article.summary %>
+        <a class="link-light" href="<%= article.url %>">Get More Tips</a>
+      </div>
+      <div class="illustration">
+        <img src="<%= article.data.illustration_tag %>" class="fadeIn" />
+      </div>
+    <% end %>
+    <%= inline_svg("images/drawn-rule.svg", class: 'drawn-rule') %>
   </div>
 </div>
 
