Load correct content in featured-tip container
This PR adds the correct content and adjusts the way other content
is loaded in their respective containers to make sure it always
has a relevant post to the given section. Typographic styling and
padding for links will be included in next PR.

--- a/source/entries/tips/how-to-add-mixins.html.erb
+++ b/source/entries/tips/how-to-add-mixins.html.erb
@@ -1,8 +1,8 @@
 ---
 
-title: Perfect Custard
-pre_title: How to make
-date: 2017-10-17 20:11 UTC
+title: Mixins
+pre_title: How to add
+date: 2017-10-03 20:11 UTC
 layout: recipes
 tags:
 category: tips
@@ -14,5 +14,5 @@ Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh 
 
 READMORE
 
-<h1>Perfect Custard</h1>
-Here are instructions for making the perfect custard!!
+<h1>Adding Mixins</h1>
+Here are instructions for adding mixins to ice cream!!
