--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -4,6 +4,7 @@
 // MIT License
 
 @import "variables";
+@import "mixins";
 
 @import "buttons";
 @import "forms";
@@ -14,3 +15,4 @@
 @import "media";
 @import "tables";
 @import "typography";
+@import "components/recipes";
