--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -7,14 +7,41 @@ html {
 
 h1,
 h2,
-h3,
 h4,
-h5,
 h6 {
+  color: $base-heading-color;
   font-family: $heading-font-family;
-  font-size: modular-scale(1);
+  letter-spacing: 0.01em;
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
+}
+
+h1 {
+  font-size: 4em;
+}
+
+h2 {
+  font-family: "Ahkio-light";
+  font-size: 2.6em;
+}
+
+h3 {
+  color: $base-heading-color;
+  font-family: $base-font-family;
+  font-size: 1.375em;
+}
+
+h4 {
+  font-size: 1.1em;
+}
+
+h5 {
+  color: $base-heading-color;
+  font-family: $base-font-family;
+  font-size: $base-font-size;
+  font-weight: normal;
+  letter-spacing: 0.07em;
+  text-transform: uppercase;
 }
 
 p {
@@ -39,44 +66,6 @@ a {
   }
 }
 
-@mixin generate-link($color, $img-url, $position, $img-url-hover) {
-  background: url($img-url) no-repeat $position;
-  background-size: contain;
-  color: $color;
-  display: block;
-  padding: 3px 20px;
-  &:hover {
-    background: url($img-url-hover) no-repeat center;
-    a {
-      color: $white;
-    }
-  }
-}
-
-.link-light {
-  @include generate-link(
-  $blue,
-  "../../images/link-background-light.svg",
-  center left,
-  "../../images/link-background-medium-hover.svg");
-}
-
-.link-medium {
-  @include generate-link(
-  $blue,
-  "../../images/link-background-medium.svg",
-  center,
-  "../../images/link-background-medium-hover.svg");
-}
-
-.link-light-small {
-  @include generate-link(
-  $blue,
-  "../../images/link-background-light-small.svg",
-  center,
-  "../../images/link-background-medium-hover.svg");
-}
-
 hr {
   border-bottom: $base-border;
   border-left: 0;
@@ -89,6 +78,14 @@ time {
   display: block;
   font-size: 80%;
   font-weight: 200;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.05em;
   text-transform: uppercase;
+}
+
+.red {
+  color: $red;
+}
+
+.heading-background {
+  background: url("../../images/h2-background.svg") no-repeat center;
 }
