Edits according to mike's comments on PR

--- a/source/entries/tips/how-to-make-perfect-custard.html.erb
+++ b/source/entries/tips/how-to-make-perfect-custard.html.erb
@@ -3,8 +3,7 @@
 title: Perfect Custard
 pre_title: How to make
 date: 2017-10-17 20:11 UTC
-layout: recipes
-tags:
+layout: tips
 category: tips
 illustration_tag: ../../../images/illustrations/custard.png
 
