--- a/source/entries/tips/how-to-add-mixins.html.erb
+++ b/source/entries/tips/how-to-add-mixins.html.erb
@@ -3,8 +3,7 @@
 title: Mixins
 pre_title: How to add
 date: 2017-10-03 20:11 UTC
-layout: recipes
-tags:
+layout: tips
 category: tips
 illustration_tag: ../../../images/illustrations/custard.png
 
